starting on my own

--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
     <h1>Personal Website</h1>
     <nav>
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <!--TO Do: add links to other pages-->
     </nav>
   </header>
   <h2>About</h2>
