--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <title>Home</title>
 </head>
 <body>
-  <h1>Home</h1>
-  <a href="about.html">About</a>
+  <h1>Personal Website</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <!--TO Do: add links to other pages-->
+    </nav>
+  <h2>Home</h2>
 </body>
 </html>
