Sunday night revisions

--- a/index.html
+++ b/index.html
@@ -7,34 +7,43 @@
   <script src="javascript.js"></script>
   <title>Home</title>
 </head>
-<body>
 
-  <header>
-    <h1>Personal Website</h1>
+<body>
+  <div class="container">
+    <header>
+      <h1>Ali Hager</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
       </nav>
-  </header>
+    </header>
 
-  <main class="Home">
-    <h2>Home</h2>
-    <h3> Welcome to My Personal Website</h3>
-    <p> My name is Ali Hager and I'm a developing developer studying with Fullstack Academy. So far, so good! I love the challenge, problem-solving, and seeing the product of my work. </p>
-    <img class="jasmine-plant" src="https://plantsexpress.com/cdn/shop/products/Star-Jasmine-Espalier-1.jpg?v=1683582238&width=1946" alt="A doorway with jasmine">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-  </main>
+    <main class="Home">
+      <h2>Home</h2>
 
-  <footer>
-    <nav>
-      <ul>Contact</ul>
-      <ul>Email: ahager2013@gmail.com</ul>
-      <ul>LinkedIn</ul>
-    </nav>
-  </footer>
+      <section>
+        <h3> Welcome to My Personal Website</h3>
+        <p> My name is Ali Hager and I'm a developing developer studying with Fullstack Academy. So far, so good! I love the challenge, problem-solving, and seeing the product of my work.</p>
+      </section>
 
-</div>
+      <section>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </section>
+
+    </main>
+
+    <footer>
+      <nav>
+        <h4>Contact</h4>
+        <a href="mailto:ahager2013@gmail.com">Email</a></li>
+        <a href="www.linkedin.com/in/alison-hager" target="_blank">LinkedIn</a></li>
+        <a href="https://github.com/ali-hager" target="_blank">github</a></li>
+        </ul>
+      </nav>
+    </footer>
+  </div>
 
 </body>
+
 </html>
