--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,11 @@
     <script src="javascript.js"></script>
     <title>Portfolio</title>
   </head>
+
   <body>
-    <div>
+    <div class="container">
       <header>
-        <h1>Personal Website</h1>
+        <h1>Ali Hager</h1>
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
@@ -43,8 +44,18 @@
 
         </div>
       </main>
-
-      <footer></footer>
+      
+      <footer>
+        <nav>
+          <h4>Contact</h4>
+          <a href="mailto:ahager2013@gmail.com">Email</a></li>
+          <a href="www.linkedin.com/in/alison-hager" target="_blank">LinkedIn</a></li>
+          <a href="https://github.com/ali-hager" target="_blank">github</a></li>
+          </ul>
+        </nav>
+      </footer>
     </div>
-  </body>
+
+    </body>
+
 </html>
