EOD Tuesday, more stlying and contact page created

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="portfolio.html">Portfolio</a>
+          <a href="contact-page.html">Contact</a>
         </nav>
       </header>
 
@@ -24,19 +25,19 @@
         <p>Here's a collection of my projects.</p>
 
         <div class="portfolio-container">
-          <section class="item">
+          <section id="item1">
             <h3>Block 02: My First Website</h3>
             <p>Assignment Directions: In this workshop,you are going to make a simple, single-page application.  We will be using HTML, which stands for ​​Hypertext Markup Language, to create our page.</p>
             <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           </section>
 
-          <section class="item">
+          <section id="item2">
             <h3>Block 05: The Zoo Problem</h3>
             <p>Assignment Directions: In this workshop,you are going to make a simple, single-page application.  We will be using HTML, which stands for ​​Hypertext Markup Language, to create our page.</p>
             <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           </section>
 
-          <section class="item">
+          <section id="item3">
             <h3>Block 06: Grocery List</h3>
             <p>Assignment Directions: In this workshop,you are going to make a simple, single-page application.  We will be using HTML, which stands for ​​Hypertext Markup Language, to create our page.</p>
             <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
