--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
+        <a href="contact-page.html">Contact</a>
       </nav>
     </header>
 
