--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <header>
       <h1>Ali Hager</h1>
-      <nav>
+      <nav class="header-links">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -20,12 +20,15 @@
       </nav>
     </header>
 
-    <main class="Home">
+    <main>
       <h2>Home</h2>
 
       <section>
         <h3> Welcome to My Personal Website</h3>
-        <p> My name is Ali Hager and I'm a developing developer studying with Fullstack Academy. So far, so good! I love the challenge, problem-solving, and seeing the product of my work.</p>
+        <div class="headshot-container">
+          <p class="bio"> My name is Ali Hager and I'm a developing developer studying with Fullstack Academy. I love the challenge, problem-solving, and seeing the product of my work.</p>
+          <img src="headshot.jpg" id="portrait" alt="Ali Hager's headshot">
+        </div>
       </section>
 
       <section>
@@ -37,10 +40,13 @@
     <footer>
       <nav>
         <h4>Contact</h4>
-        <a href="mailto:ahager2013@gmail.com">Email</a></li>
-        <a href="www.linkedin.com/in/alison-hager" target="_blank">LinkedIn</a></li>
-        <a href="https://github.com/ali-hager" target="_blank">github</a></li>
-        </ul>
+
+        <div class="footer-links">
+        <a href="mailto:ahager2013@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/alison-hager" target="_blank">LinkedIn</a>
+        <a href="https://github.com/ali-hager" target="_blank">github</a>
+        </div>
+
       </nav>
     </footer>
   </div>
