--- a/portfolio.html
+++ b/portfolio.html
@@ -49,12 +49,16 @@
       <footer>
         <nav>
           <h4>Contact</h4>
-          <a href="mailto:ahager2013@gmail.com">Email</a></li>
-          <a href="www.linkedin.com/in/alison-hager" target="_blank">LinkedIn</a></li>
-          <a href="https://github.com/ali-hager" target="_blank">github</a></li>
-          </ul>
+  
+          <div class="footer-links">
+          <a href="mailto:ahager2013@gmail.com">Email</a>
+          <a href="https://www.linkedin.com/in/alison-hager" target="_blank">LinkedIn</a>
+          <a href="https://github.com/ali-hager" target="_blank">github</a>
+          </div>
+          
         </nav>
       </footer>
+
     </div>
 
     </body>
