--- a/portfolio.html
+++ b/portfolio.html
@@ -27,20 +27,23 @@
         <div class="portfolio-container">
           <section id="item1">
             <h3>Block 02: My First Website</h3>
-            <p>Assignment Directions: In this workshop,you are going to make a simple, single-page application.  We will be using HTML, which stands for ​​Hypertext Markup Language, to create our page.</p>
-            <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p>Assignment Directions: Make a simple, single-page application. Add a header and two paragraph tags between the body tag. Add CSS with background color, text decoration, alignment, and color.</p>
+            <!-- <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+            <img src="myfirstHTML.png" class="portfolio-image" alt="basic HTML page">
           </section>
 
           <section id="item2">
-            <h3>Block 05: The Zoo Problem</h3>
-            <p>Assignment Directions: In this workshop,you are going to make a simple, single-page application.  We will be using HTML, which stands for ​​Hypertext Markup Language, to create our page.</p>
-            <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <h3> <a href="https://github.com/ali-hager/block05.git">Block 05: The Zoo Problem</a> </h3>
+            <p>Assignment Directions: Create a zoo page using HTML semantic tags (header, footer, article, section, summary). Begin with a main header and a title for the browser tab. Organize content with headings for animal types (Bears, Giraffes, Lions, Monkeys, Alligators), listing individual names. Include descriptions using paragraph, section, or article tags. Add links for each animal leading to external fact pages for quick access to more information. Embed photos for visual appeal. Enhance code readability with appropriate comments throughout.</p>
+            <!-- <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+            <img src="ZooProject.png" class="portfolio-image" alt="List of Zoon Animals">
           </section>
 
           <section id="item3">
-            <h3>Block 06: Grocery List</h3>
-            <p>Assignment Directions: In this workshop,you are going to make a simple, single-page application.  We will be using HTML, which stands for ​​Hypertext Markup Language, to create our page.</p>
-            <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <h3><a href="https://github.com/ali-hager/block06.git">Block 06: Grocery List</a></h3>
+            <p>Assignment Directions: Your goal is to create an HTML file that has food photos, different categories of grocery items and list the different items.</p>
+            <!-- <p>Metacognition: It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+            <img src="GroceryList.png" class="portfolio-image" alt="Grocery List">
           </section>
 
         </div>
